# StockNet

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: Code_Style_Check.yml  black.yaml  black.yml  code-quality.yml
source/: test.py
source/data/: stock_download.py
